--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.1",
+    "html2canvas": "^1.4.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
@@ -21,7 +22,6 @@
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3",
     "vite": "^2.9.7"
   }
 }
