Integração do Fonte com a api mas o mailtrap

--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "author": "felipe",
   "license": "MIT",
   "private": true,
-  "workspaces": [
-    "packages/*"
-    
-  ],
+  "workspaces":{ 
+    "packages": ["packages/*"]
+  },
   "devDependencies": {
     "typescript": "^4.7.2"
   },
